--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,11 @@
 			<artifactId>guice-assistedinject</artifactId>
 			<version>4.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.google.inject.extensions</groupId>
+			<artifactId>guice-multibindings</artifactId>
+			<version>4.0</version>
+		</dependency>
 
 
 	</dependencies>
